--- a/app/src/main/res/layout/tab2.xml
+++ b/app/src/main/res/layout/tab2.xml
@@ -3,19 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#e6ee9c">
+    android:background="#eeeeee">
 
-        <TextView
-            android:id="@+id/text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="30dp"
-            android:textStyle="bold"
-            android:layout_centerHorizontal="true"
-            android:textColor="#000000"
-            android:text="လွ်ပ္စစ္အႏၲရာယ္ ရွိနိုင္သည့္ ဗို႔အား"
-            android:textAppearance="?android:attr/textAppearanceLarge"/>
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -23,18 +12,31 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+                        <TextView
+                            android:id="@+id/text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginTop="30dp"
+                            android:textStyle="bold"
+                            android:layout_centerHorizontal="true"
+                            android:textColor="#000000"
+                            android:text="လွ်ပ္စစ္အႏၲရာယ္ ရွိနိုင္သည့္ ဗို႔အား"
+                            android:textAppearance="?android:attr/textAppearanceLarge"/>
                         <ImageView
                             android:layout_width="250dp"
                             android:layout_height="150dp"
                             android:id="@+id/img1"
-                            android:src="@drawable/kid"
-                            android:layout_margin="20dp"/>
+                            android:paddingTop="10dp"
+                            android:src="@drawable/highvoltage"
+                            android:layout_gravity="center"
+                            android:padding="5dp"/>
         <TextView
             android:id="@+id/text1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:textSize="15sp"
             android:textColor="#000000"
             android:text="
