--- a/app/src/main/res/layout/tab4.xml
+++ b/app/src/main/res/layout/tab4.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#e6ee9c">
+    android:background="#eeeeee">
 
     <TextView
         android:id="@+id/text"
@@ -19,9 +19,17 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <ImageView
+                android:layout_width="250dp"
+                android:layout_height="150dp"
+                android:id="@+id/img1"
+                android:src="@drawable/children"
+                android:layout_gravity="center"
+                android:padding="5dp"/>
             <TextView
                 android:id="@+id/text1"
                 android:layout_width="match_parent"
@@ -44,6 +52,6 @@
 (၁၁) ဆားဗစ္ႀကိဳးအရွည္မွာ အမ်ားဆုံး ေပ(၃၀၀)အတြင္းရွိရမည္။ \n\n
 (၁၂)	 ဆားဗစ္ဝါယာႀကိဳးသည္ ေျမျပင္မွ အနည္းဆုံး (၁၈)ေပ ျမင့္ရမည္။ \n\n
 (၁၃) ဆားဗစ္ဝါယာႀကိဳး ေဟာင္းႏြမ္း/ေပါက္ၿပဲပါက ခ်က္ခ်င္းအသစ္လဲရမည္။"/>
-        </RelativeLayout>
+        </LinearLayout>
     </ScrollView>
 </LinearLayout>
